header, main, footer css setup

--- a/style.css
+++ b/style.css
@@ -2,3 +2,38 @@
   padding: 0;
   margin: 0;
 }
+
+
+
+
+
+
+
+
+/*HEADER*/
+
+header{
+
+}
+
+
+
+
+
+
+/*MAIN*/
+
+main{
+
+}
+
+
+
+
+
+
+/*FOOTER*/
+
+footer{
+  
+}
