working nav created

--- a/style.css
+++ b/style.css
@@ -12,8 +12,8 @@
 
 /*HEADER*/
 
-header{
-
+header {
+  height: 70px;
 }
 
 
@@ -23,7 +23,7 @@ header{
 
 /*MAIN*/
 
-main{
+main {
 
 }
 
@@ -34,6 +34,6 @@ main{
 
 /*FOOTER*/
 
-footer{
-  
+footer {
+
 }
