--- a/style.css
+++ b/style.css
@@ -14,6 +14,10 @@
 
 header {
   height: 70px;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
 }
 
 
@@ -24,8 +28,10 @@ header {
 /*MAIN*/
 
 main {
-
+  margin-top: 70px;
 }
+
+
 
 
 
