--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 }
 
 body{
-  
+
 }
 
 
@@ -22,6 +22,7 @@ header {
   top: 0;
   left: 0;
   width: 100%;
+  z-index: 1;
 }
 
 
@@ -37,6 +38,11 @@ main {
 
 .jumbotron{
   background-image: url();
+}
+
+.cards{
+  display: flex;
+  justify-content: space-around;
 }
 
 
