--- a/style.css
+++ b/style.css
@@ -45,6 +45,12 @@ main {
   justify-content: space-around;
 }
 
+.menu{
+  margin-top: 100px;
+  display: flex;
+  justify-content: center;
+}
+
 
 
 
