--- a/style.css
+++ b/style.css
@@ -54,6 +54,15 @@ main {
   justify-content: center;
 }
 
+.menu h3, .menu h4{
+  text-align: center;
+  font-weight: bold;
+}
+
+.menuL{
+  border-right: solid 1px black;
+}
+
 
 
 
