--- a/style.css
+++ b/style.css
@@ -69,6 +69,21 @@ main {
   padding: 0 15px 0 15px;
 }
 
+.verzendK input{
+  padding-left: 35px;
+}
+
+.verzendK{
+  position: relative;
+}
+
+.verzendK i{
+  position: absolute;
+  left: 25px;
+  top: 10px;
+  color: white;
+}
+
 
 
 
