--- a/style.css
+++ b/style.css
@@ -103,3 +103,12 @@ main {
 footer {
 
 }
+
+
+
+
+@media only screen and (min-width: 768px){
+  .menuL{
+    border-right: solid 1px black;
+  }
+}
