--- a/style.css
+++ b/style.css
@@ -37,7 +37,18 @@ main {
 }
 
 .jumbotron{
+  background: url(img/intirior.jpg);
+  background-size: cover;
+  background-position: center;
+}
 
+.text-jumbo{
+  color: white;
+  text-align: center;
+  width: 90%;
+  border: solid 2px white;
+  margin: auto;
+  background-color: rgba(0,0,0,.7);
 }
 
 .cards{
