--- a/css/style.css
+++ b/css/style.css
@@ -1,126 +1,87 @@
-*{
+* {
   padding: 0;
-  margin: 0;
-}
-
-body{
-
-}
-
-
-
-
-
-
-
+  margin: 0; }
 
 /*HEADER*/
-
 header {
   height: 70px;
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
-  z-index: 1;
-}
-
-
-
-
-
+  z-index: 1; }
 
 /*MAIN*/
-
 main {
-  margin-top: 100px;
-}
+  margin-top: 100px; }
 
-.jumbotron{
+.jumbotron {
   background: url(img/intirior.jpg);
   background-size: cover;
-  background-position: center;
-}
+  background-position: center; }
 
-.text-jumbo{
+.text-jumbo {
   color: white;
   text-align: center;
   width: 80%;
   border: solid 2px white;
   margin: auto;
-  background-color: rgba(0,0,0,.5);
-  padding: 5px;
-}
+  background-color: rgba(0, 0, 0, 0.5);
+  padding: 5px; }
 
-.cards{
+.cards {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: space-around;
-}
+  -ms-flex-pack: distribute;
+  justify-content: space-around; }
 
-
-
-
-.center-card{
+.center-card {
   margin-top: 100px;
   margin-bottom: 30px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
-}
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center; }
 
-.center-card h3, .center-card h4{
+.center-card h3, .center-card h4 {
   text-align: center;
-  font-weight: bold;
-}
+  font-weight: bold; }
 
-.option{
+.option {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
   justify-content: space-between;
-  padding: 0 15px 0 15px;
-}
+  padding: 0 15px 0 15px; }
 
-.verzendK input{
-  padding-left: 35px;
-}
+.verzendK input {
+  padding-left: 35px; }
 
-.verzendK{
-  position: relative;
-}
+.verzendK {
+  position: relative; }
 
-.verzendK i{
+.verzendK i {
   position: absolute;
   left: 25px;
   top: 10px;
-  color: white;
-}
+  color: white; }
 
-.blur-BG{
+.blur-BG {
   width: 100vw;
   height: 100vh;
   left: 0;
   top: 0;
   position: fixed;
   background: url(img/intirior.jpg);
-  filter: blur(2px);
-}
-
-
-
-
-
-
-
+  -webkit-filter: blur(2px);
+  filter: blur(2px); }
 
 /*FOOTER*/
-
-footer {
-
-}
-
-
-
-
-@media only screen and (min-width: 768px){
-  .menuL{
-    border-right: solid 1px black;
-  }
-}
+@media only screen and (min-width: 768px) {
+  .menuL {
+    border-right: solid 1px black; } }
