--- a/sass/style.scss
+++ b/sass/style.scss
@@ -36,7 +36,7 @@ main {
   margin-top: 100px;
 
   .jumbotron{
-    background: url(img/intirior.jpg);
+    background: url(../img/intirior.jpg);
     background-size: cover;
     background-position: center;
   }
@@ -98,7 +98,7 @@ main {
     left: 0;
     top: 0;
     position: fixed;
-    background: url(img/intirior.jpg);
+    background: url(../img/intirior.jpg);
     filter: blur(2px);
   }
 }
