--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,3 +1,5 @@
+@import "mixins";
+
 *{
   padding: 0;
   margin: 0;
@@ -39,6 +41,8 @@ main {
     background: url(../img/intirior.jpg);
     background-size: cover;
     background-position: center;
+    border-radius: 0;
+    @include fullWhith();
   }
 
   .text-jumbo{
@@ -107,9 +111,7 @@ main {
 
   #adres-con{
     height: 700px;
-    position: relative;
-    left: -15px;
-    width: calc(100% + 30px);
+    @include fullWhith();
 
     iframe{
       position: absolute;
