--- a/sass/style.scss
+++ b/sass/style.scss
@@ -42,6 +42,7 @@ main {
     background-size: cover;
     background-position: center;
     border-radius: 0;
+    margin-top: -15px;
     @include fullWhith();
   }
 
