--- a/sass/mixins.scss
+++ b/sass/mixins.scss
@@ -3,3 +3,17 @@
   left: -15px;
   width: calc(100% + 30px);
 }
+
+
+@mixin mQ($args...){
+  @if length($args) == 1{
+    @media screen and (max-width: nth($args, 1)){
+      @content;
+    }
+  }
+  @if length($args) == 2{
+    @media screen and (max-width: nth($args, 1)) and (min-width: nth($args, 2)){
+      @content;
+    }
+  }
+}
