--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,8 @@ header {
 /*MAIN*/
 main {
   margin-top: 100px; }
+  main img {
+    width: 100%; }
   main .jumbotron {
     background: url(../img/intirior.jpg);
     background-size: cover;
