--- a/sass/style.scss
+++ b/sass/style.scss
@@ -37,6 +37,14 @@ header {
 main {
   margin-top: 100px;
 
+  img{
+    width: 100%;
+  }
+
+
+
+  //HOME
+
   .jumbotron{
     background: url(../img/intirior.jpg);
     background-size: cover;
@@ -76,6 +84,10 @@ main {
     }
   }
 
+
+
+  //MENU
+
   .option{
     display: flex;
     justify-content: space-between;
@@ -96,10 +108,6 @@ main {
       color: white;
     }
   }
-
-
-
-  //MENU
 
   .blur-BG{
     width: 100vw;
