--- a/css/style.css
+++ b/css/style.css
@@ -21,10 +21,12 @@ main {
     background-size: cover;
     background-position: center;
     border-radius: 0;
-    margin-top: -15px;
+    margin-top: -100px;
     position: relative;
     left: -15px;
-    width: calc(100% + 30px); }
+    width: calc(100% + 30px);
+    height: 100vh;
+    min-height: 480px; }
   main .text-jumbo {
     color: white;
     text-align: center;
@@ -32,7 +34,8 @@ main {
     border: solid 2px white;
     margin: auto;
     background-color: rgba(0, 0, 0, 0.5);
-    padding: 5px; }
+    padding: 5px;
+    margin-top: 30vh; }
   main .cards {
     display: -webkit-box;
     display: -ms-flexbox;
