--- a/sass/style.scss
+++ b/sass/style.scss
@@ -50,8 +50,10 @@ main {
     background-size: cover;
     background-position: center;
     border-radius: 0;
-    margin-top: -15px;
+    margin-top: -100px;
     @include fullWhith();
+    height: 100vh;
+    min-height: 480px;
   }
 
   .text-jumbo{
@@ -62,6 +64,7 @@ main {
     margin: auto;
     background-color: rgba(0,0,0,.5);
     padding: 5px;
+    margin-top: 30vh;
   }
 
   .cards{
