--- a/css/style.css
+++ b/css/style.css
@@ -31,11 +31,21 @@ main {
     color: white;
     text-align: center;
     width: 80%;
+    height: 20vh;
     border: solid 2px white;
     margin: auto;
     background-color: rgba(0, 0, 0, 0.5);
     padding: 5px;
-    margin-top: 30vh; }
+    position: relative;
+    top: 50vh;
+    margin-top: -10vh; }
+    @media screen and (max-width: 768px) {
+      main .text-jumbo h1 {
+        font-size: 40px; } }
+    @media screen and (max-width: 541px) {
+      main .text-jumbo {
+        height: 30vh;
+        margin-top: -15vh; } }
   main .cards {
     display: -webkit-box;
     display: -ms-flexbox;
