posision of jumbotron background is fixed

--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,7 @@ main {
     width: 100%; }
   main .jumbotron {
     background: url(../img/intirior.jpg);
+    background-attachment: fixed;
     background-size: cover;
     background-position: center;
     border-radius: 0;
