--- a/sass/style.scss
+++ b/sass/style.scss
@@ -47,6 +47,7 @@ main {
 
   .jumbotron{
     background: url(../img/intirior.jpg);
+    background-attachment: fixed;
     background-size: cover;
     background-position: center;
     border-radius: 0;
