--- a/sass/style.scss
+++ b/sass/style.scss
@@ -84,6 +84,10 @@ main {
   .cards{
     display: flex;
     justify-content: space-around;
+
+    .card{
+      border: none !important;
+    }
   }
 
 
